--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "compression": "^1.6.2",
     "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.1",
