--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.6.2",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
+    "request": "^2.83.0",
     "serve-favicon": "~2.3.0",
     "superagent": "^2.3.0",
     "superagent-jsonapify": "^1.4.2"
